--- a/mysql/MySql实战45_2024.md
+++ b/mysql/MySql实战45_2024.md
@@ -831,3 +831,87 @@ InnoDB 引擎遍历整张表，但不取值。server 层对于返回的每一行
 
 #### 结论
 按照效率排序的话，```count(字段)<count(主键 id)<count(1)≈count(*)```，所以建议，尽量使用 count(*)。除非需要统计某个字段非null数量
+
+## # 日志和索引相关重点、难点整理
+
+#### 事务两阶段提交过程中服务发生崩溃怎么办？
+我们知道binlog（归档日志）和 redo log（重做日志）配合崩溃恢复的时候，如果没有两阶段提交，会导致 MySQL 出现主备数据不一致等问题。如果在两阶段提交的不同瞬间，MySQL 如果发生异常重启，是怎么保证数据完整性的？
+
+更新Id=2的一行数据的步骤，并标注两个崩溃时刻： server层 => 引擎层取ID=2这一行 => 在内存中直接返回数据，否则磁盘中读入数据 => sever层将这行数据b字段加1，调用引擎层写入新行 => 新行更新到内存
+=> 写入 redo log 并处于prepare状态（时刻A） => server层写bin log（时刻B） => 提交事务，处于commit状态 => 事务提交完成
+
+注意这里的这个“commit 步骤”，指的是事务提交过程中的一个小步骤，也是最后一步。当这个步骤执行完成后，这个事务就提交完成了。“commit 语句”执行的时候，会包含“commit 步骤”。不要与commit语句混淆。
+
+* 在两阶段提交的不同时刻，MySQL 异常重启会出现什么现象？
+   - 如果在上面时刻 A 的地方崩溃，也就是写入 redo log 处于 prepare 阶段之后、写 binlog 之前，发生了崩溃（crash），由于此时 binlog 还没写，redo log 也还没提交，所以崩溃恢复的时候，这个事务会回滚。这时候，binlog 还没写，所以也不会传到备库。
+   - 如果在上面时刻 A 的地方崩溃，分多种情况：
+      - 如果 redo log 里面的事务是完整的，也就是已经有了 commit 标识，则直接提交；
+      - 如果 redo log 里面的事务只有完整的 prepare，则判断对应的事务 binlog 是否存在并完整，如果完整则直接提交事务，否则回滚事务。
+
+* MySQL 怎么知道 binlog 是完整的?
+一个事务的 binlog 是有完整格式的：
+1. statement 格式的 binlog，最后会有 COMMIT；
+2. row 格式的 binlog，最后会有一个 XID event。
+另外，在 MySQL 5.6.2 版本以后，还引入了 binlog-checksum 参数，用来验证 binlog 内容的正确性。对于 binlog 日志由于磁盘原因，可能会在日志中间出错的情况，MySQL 可以通过校验 checksum 的结果来发现。所以，MySQL 还是有办法验证事务 binlog 的完整性的。
+
+
+#### redo log 和 binlog 是怎么关联起来的?
+它们有一个共同的数据字段，叫 XID。崩溃恢复的时候，会按顺序扫描 redo log：
+1. 如果碰到既有 prepare、又有 commit 的 redo log，就直接提交；
+2. 如果碰到只有 parepare、而没有 commit 的 redo log，就拿着 XID 去 binlog 找对应的事务。
+
+#### 处于 prepare 阶段的 redo log 加上完整 binlog，重启就能恢复，MySQL 为什么要这么设计?
+其实，这个跟数据与备份的一致性有关。在时刻 B，也就是 binlog 写完以后 MySQL 发生崩溃，这时候 binlog 已经写入了，之后就会被从库（或者用这个 binlog 恢复出来的库）使用。所以，在主库上也要提交这个事务。采用这个策略，主库和备库的数据就保证了一致性。
+
+#### 为什么还要两阶段提交？干脆先 redo log 写完，再写 binlog。崩溃恢复的时候，必须得两个日志都完整才可以。是不是一样的逻辑？
+其实，两阶段提交是经典的分布式系统问题，并不是 MySQL 独有的。如果必须要举一个场景，来说明这么做的必要性的话，那就是事务的持久性问题。
+对于 InnoDB 引擎来说，如果 redo log 提交完成了，事务就不能回滚（如果这还允许回滚，就可能覆盖掉别的事务的更新）。而如果 redo log 直接提交，然后 binlog 写入的时候失败，InnoDB 又回滚不了，数据和 binlog 日志又不一致了。两阶段提交就是为了给所有人一个机会，当每个人都说“我 ok”的时候，再一起提交。
+
+#### 不引入两个日志，也就没有两阶段提交的必要了。只用 binlog 来支持崩溃恢复，又能支持归档，不就可以了？
+只保留 binlog，然后可以把提交流程改成这样：… -> “数据更新到内存” -> “写 binlog” -> “提交事务”，是不是也可以提供崩溃恢复的能力？
+
+原因有二：
+1. innodb 在加入mysql之前就已经存在，且也是具有崩溃时对数据页的恢复能力的，在 innodb 加入之前 mysql 是不具备内存页崩溃恢复能力的，加入后就直接复用这个能力了；
+
+2. 因为 binlog 没有记录内存数据页的细节，InnoDB 引擎使用的是 WAL 技术，执行事务的时候，写完内存和日志，事务就算完成了。如果之后崩溃，要依赖于日志来恢复数据页，崩溃后内存数据页丢失，因为 binlog 没有对应的细节记录，导致数据页的内容无法恢复了。而且是数据页级的丢失，数据页里可能不止一行数据，也不止一行数据被更新过。
+
+如果要说，那优化一下 binlog 的内容，让它来记录数据页的更改可以吗？但，这其实就是又做了一个 redo log 出来。
+
+所以，至少现在的 binlog 能力，还不能支持崩溃恢复。
+
+
+#### 那能不能反过来，只用 redo log，不要 binlog？
+如果只从崩溃恢复的角度来讲是可以的。你可以把 binlog 关掉，这样就没有两阶段提交了，但系统依然是 crash-safe 的。
+
+但是，但凡了解一下业界各个公司的使用场景的话，就会发现在正式的生产库上，binlog 都是开着的。因为 binlog 有着 redo log 无法替代的功能。
+
+1. 一个是归档。redo log 是循环写，写到末尾是要回到开头继续写的。这样历史日志没法保留，redo log 也就起不到归档的作用。
+2. 一个就是 MySQL 系统依赖于 binlog。binlog 作为 MySQL 一开始就有的功能，被用在了很多地方。其中，MySQL 系统高可用的基础，就是 binlog 复制。
+
+还有很多公司有异构系统（比如一些数据分析系统），这些系统就靠消费 MySQL 的 binlog 来更新自己的数据。关掉 binlog 的话，这些下游系统就没法输入了。
+
+总之，由于现在包括 MySQL 高可用在内的很多系统机制都依赖于 binlog，所以“鸠占鹊巢”redo log 还做不到。所以，发展生态是多么的重要。
+
+#### redo log 一般设置多大？
+redo log 太小的话，会导致很快就被写满，然后不得不强行刷 redo log，这样 WAL 机制的能力就发挥不出来了。
+所以，如果是现在常见的几个 TB 的磁盘的话，就不要太小气了，直接将 redo log 设置为 4 个文件、每个文件 1GB 吧。
+
+#### 正常运行中的实例，数据写入后的最终落盘，是从 redo log 更新过来的还是从 buffer pool 更新过来的呢？
+这个问题非常好。这里涉及到了，“redo log 里面到底是什么”的问题。实际上，redo log 并没有记录数据页的完整数据，所以它并没有能力自己去更新磁盘数据页，也就不存在“数据最终落盘，是由 redo log 更新过去”的情况。
+
+1. 如果是正常运行的实例的话，数据页被修改以后，跟磁盘的数据页不一致，称为脏页。最终数据落盘，就是把内存中的数据页写盘。这个过程，甚至与 redo log 毫无关系。
+2. 在崩溃恢复场景中，InnoDB 如果判断到一个数据页可能在崩溃恢复的时候丢失了更新，就会将它读到内存，然后让 redo log 更新内存内容。更新完成后，内存页变成脏页，就回到了第一种情况的状态。
+
+#### redo log buffer 是什么？是先修改内存，还是先写 redo log 文件？
+在一个事务的更新过程中，日志是要写多次的。生成的日志都得先保存起来，但又不能在还没 commit 的时候就直接写到 redo log 文件里。所以，redo log buffer 就是一块内存，用来先存 redo 日志的。也就是说，在执行第一个更新的时候，数据的内存被修改了，redo log buffer 也写入了日志。但是，真正把日志写到 redo log 文件（文件名是 ib_logfile+ 数字），是在执行 commit 语句的时候做的。（这里的是事务执行过程中不会“主动去刷盘”，以减少不必要的 IO 消耗。但是可能会出现“被动写入磁盘”，比如内存不够、其他事务提交等情况。）
+
+
+## # “order by”是怎么工作的？
+
+以以下语句为例，假设已经存在表t，且表t存在 city,name,age 字段，name字段为普通索引
+```sql
+elect city,name,age from t where city='杭州' order by name limit 1000;
+```
+
+#### 全字段排序
+explain 中 extra字段中的“Using filesort”表示的就是需要排序，MySQL 会给每个线程分配一块内存用于排序，称为 sort_buffer。
