--- a/mysql/MySql实战45_2024.md
+++ b/mysql/MySql实战45_2024.md
@@ -7,11 +7,20 @@
 
 使用示例: ``` SELECT * FROM `information_schema`.`OPTIMIZER_TRACE` ```
 
-2 执行计划explain
+2. 执行计划explain
 | id | select_type | table | partitions | type    | possible_keys | key | key_len | ref | rows | filtered | Extra       |
 | -- | ----------- | ----- | ---------- | ------- | ------------- | --- | ------- | --- | ---- | -------- | -----       |
 | 1  | SIMPLE      | t     | const      | PRIMARY | PRIMARY       |  4  | const   | 1   | 100  |          |             |
 
+3. gap lock
+间隙锁
+
+4. next key lock
+临键锁（X锁+间隙锁）
+
+5. 行读锁（S lock 共享锁）
+
+6. 行写锁（X lock 排它锁）
 
 
 ## # 执行过程
@@ -1212,6 +1221,20 @@ select d.* from t, t1 where t1.aid=t.id and t.id=2;
 
 ## # 幻读是什么，幻读有什么问题？
 
+#### 测试表
+```sql
+CREATE TABLE `t` (
+  `id` int(11) NOT NULL,
+  `c` int(11) DEFAULT NULL,
+  `d` int(11) DEFAULT NULL,
+  PRIMARY KEY (`id`),
+  KEY `c` (`c`)
+) ENGINE=InnoDB;
+
+insert into t values(0,0,0),(5,5,5),
+(10,10,10),(15,15,15),(20,20,20),(25,25,25);
+```
+
 #### 幻读
 幻读指的是一个事务在前后两次查询同一个范围的时候，后一次查询看到了前一次查询没有看到的行。
 
@@ -1220,3 +1243,162 @@ select d.* from t, t1 where t1.aid=t.id and t.id=2;
 2. 当前事务使用“当前读”读取到被修改的数据不能称为幻读，幻读仅专指“新插入的行”。
 
 #### 幻读有什么问题？
+1. 首先是语义上的。例如有表t，字段id和d，“我要把所有 d=5 的行锁住，不准别的事务进行读写操作，但是如果另外一个事务将d=2这行的d更新为5，或者插入了新值d=5的行”。都会导致“所有d=5的行锁住”这个语义被破坏了。
+
+2. 其次，是数据一致性的问题。
+锁的设计是为了保证数据的一致性。而这个一致性，不止是数据库内部数据状态在此刻的一致性，还包含了数据和日志在逻辑上的一致性。即使把所有的记录都加上锁，还是阻止不了新插入的记录，这也是为什么“幻读”会被单独拿出来解决的原因。
+
+#### 上面都是建立在mysql没有解决幻读的情况下的假设，现在再看看 InnoDB 怎么解决幻读的问题。
+现在知道了，产生幻读的原因是，行锁只能锁住行，但是新插入记录这个动作，要更新的是记录之间的“间隙”。因此，为了解决幻读问题，InnoDB 只好引入新的锁，也就是间隙锁 (Gap Lock)。
+
+顾名思义，间隙锁，锁的就是两个值之间的空隙。如果表 t，初始化插入了 6 个记录，这就产生了 7 个间隙。这样，当你执行 select * from t where d=5 for update 的时候，就不止是给数据库中已有的 6 个记录加上了行锁，还同时加了 7 个间隙锁。这样就确保了无法再插入新的记录。
+
+也就是说这时候，在一行行扫描的过程中，不仅将给行加上了行锁，还给行两边的空隙，也加上了间隙锁。
+
+数据行是可以加上锁的实体，数据行之间的间隙，也是可以加上锁的实体。但是间隙锁跟我们之前碰到过的锁都不太一样。
+
+* 行锁：
+|      | 读锁 | 写锁 |
+| ---- | ---- | ---- |
+| 读锁 | 兼容 | 冲突 |
+| 写锁 | 冲突 | 冲突 |
+
+* 间隙锁（gap lock）：
+注意gap锁只会给索引加锁，且不止在二级索引上，在主键上也会出现，且只在可重复读隔离级别下才存在。（其实读提交隔离级别在外键场景下还是有间隙锁，相对比较复杂）
+
+间隙锁不一样，跟间隙锁存在冲突关系的，是“往这个间隙中插入一个记录”这个操作。间隙锁之间都不存在冲突关系。
+
+事务A: ``` select * from t where d=7 lock in share mode ```
+事务B：``` select * from t where d=7 lock for update ```
+
+事务A、事务B 同时执行，这里 session B 并不会被堵住。因为表 t 里并没有 c=7 这个记录，因此 session A 加的是间隙锁 (5,10)。而 session B 也是在这个间隙加的间隙锁。它们有共同的目标，即：保护这个间隙，不允许插入值。但，它们之间是不冲突的。
+
+间隙锁和行锁合称 next-key lock，每个 next-key lock 是前开后闭区间。也就是说，我们的表 t 初始化以后，如果用 select * from t for update 要把整个表所有记录锁起来，就形成了 7 个 next-key lock，分别是 (-∞,0]、(0,5]、(5,10]、(10,15]、(15,20]、(20, 25]、(25, +supremum]。supremum从哪里来的？这是因为 +∞是开区间。实现上，InnoDB 给每个索引加了一个不存在的最大值 supremum，这样才符合我们前面说的“都是前开后闭区间”。
+
+我们把间隙锁记为开区间，把 next-key lock 记为前开后闭区间。
+
+#### 间隙锁和 next-key lock 的引入，帮我们解决了幻读的问题，但同时也带来了一些“困扰”。
+
+任意锁住一行，如果这一行不存在的话就插入，如果存在这一行就更新它的数据，代码如下：
+```sql
+begin;
+select * from t where id=N for update;
+
+/*如果行不存在*/
+insert into t values(N,);
+/*如果行存在*/
+update t set d=N set id=N;
+
+commit;
+```
+这个不是 ``` insert … on duplicate key update ``` 就能解决吗？但其实在有多个唯一键的时候，这个方法是不能满足这个需求的。至于为什么，往下看，现在只需知道不能满足即可。
+
+上面这个事务的现象是，这个逻辑一旦有并发，就会碰到死锁。很奇怪，这个逻辑每次操作前用 for update 锁起来，已经是最严格的模式了，怎么还会有死锁呢？
+
+举个例子模仿下：
+| 事务A | 事务B |
+|-------|-------|
+| Begin; select t where id=9 for update;                           |                                          |
+|                                                                  | Begin; select t where id=9 for update;   |
+|                                                                  |  insert into t values(9,9,9); (blocked); |
+| insert into t values(9,9,9);  (ERROR 1213(40001):Deadlock found) |                                          |
+
+可以看到，其实都不需要用到后面的 update 语句，就已经形成死锁了。现在按语句执行顺序来分析一下：
+1. 事务A 执行 select … for update 语句，由于 id=9 这一行并不存在，因此会加上间隙锁 (5,10);
+2. 事务B 执行 select … for update 语句，同样会加上间隙锁 (5,10)，间隙锁之间不会冲突，因此这个语句可以执行成功；
+3. 事务B 试图插入一行 (9,9,9)，被 session A 的间隙锁挡住了，只好进入等待；
+4. 事务A 试图插入一行 (9,9,9)，被 session B 的间隙锁挡住了。
+至此，两个事务进入互相等待状态，形成死锁。当然，InnoDB 的死锁检测马上就发现了这对死锁关系，让事务A的 insert 语句报错返回了。
+
+现在知道了，间隙锁的引入，可能会导致同样的语句锁住更大的范围，这其实是影响了并发度的。其实，这还只是一个简单的例子，在下面还会碰到更多、更复杂的例子。
+
+#### 为了解决幻读的问题，我们引入了这么一大串内容，有没有更简单一点的处理方法呢。
+间隙锁是在可重复读隔离级别下才会生效的。你如果把隔离级别设置为读提交的话，就没有间隙锁了。但同时，要解决可能出现的数据和日志不一致问题，需要把 binlog 格式设置为 row。这，也是现在不少公司使用的配置组合。
+
+公司会选择：使用的是读提交隔离级别加 binlog_format=row 的组合
+
+配置是否合理，跟业务场景有关，需要具体问题具体分析。如果 DBA 认为之所以这么用的原因是“大家都这么用”，那就有问题了，或者说，迟早会出问题。比如说，大家都用读提交，可是逻辑备份的时候，mysqldump 为什么要把备份线程设置成可重复读呢？然后就变成，在备份期间，备份线程用的是可重复读，而业务线程用的是读提交。同时存在两种事务隔离级别，会不会有问题？
+
+进一步地，这两个不同的隔离级别现象有什么不一样的，关于我们的业务，“用读提交就够了”这个结论是怎么得到的？如果业务开发和运维团队这些问题都没有弄清楚，那么“没问题”这个结论，本身就是有问题的。
+
+
+## # mysql 重复读隔离级别 加锁规则 (mysql 适用版本：即 5.x 系列 <=5.7.24，8.0 系列 <=8.0.13)
+
+#### 加锁规则里面，包含了两个“原则”、两个“优化”和一个“bug”。
+1. 原则 1：加锁的基本单位是 next-key lock。记得，next-key lock 是前开后闭区间。
+2. 原则 2：查找过程中访问到的对象才会加锁。
+3. 优化 1：索引上的等值查询，给唯一索引加锁的时候，next-key lock 退化为行锁。
+4. 优化 2：索引上的等值查询，向右遍历时且最后一个值不满足等值条件的时候，next-key lock 退化为间隙锁。
+5. 一个 bug：唯一索引上的范围查询会访问到不满足条件的第一个值为止。
+
+#### 测试表
+```sql
+CREATE TABLE `t` (
+  `id` int(11) NOT NULL,
+  `c` int(11) DEFAULT NULL,
+  `d` int(11) DEFAULT NULL,
+  PRIMARY KEY (`id`),
+  KEY `c` (`c`)
+) ENGINE=InnoDB;
+
+insert into t values(0,0,0),(5,5,5),
+(10,10,10),(15,15,15),(20,20,20),(25,25,25);
+```
+
+#### 第一个例子是关于等值条件操作间隙（等值查询间隙锁）
+| 事务A | 事务B | 事务C |
+| ----- | ----- | ----- |
+| begin; update t set d=d+1 where id = 7; |                                       |                                            |
+|                                         | insert into values(8,8,8);（blocked） |                                            |
+|                                         |                                       | update t set d=d+1 where id=10;（exec ok） |
+
+由于表 t 中没有 id=7 的记录，所以用我们上面提到的加锁规则判断一下的话：
+1. 根据原则 1，加锁单位是 next-key lock，session A 加锁范围就是 (5,10]；
+2. 同时根据优化 2，这是一个等值查询 (id=7)，而 id=10 不满足查询条件，next-key lock 退化成间隙锁，因此最终加锁的范围是 (5,10)。
+所以，session B 要往这个间隙里面插入 id=8 的记录会被锁住，但是 session C 修改 id=10 这行是可以的。
+
+#### 案例二：非唯一索引等值锁
+| 事务A | 事务B | 事务C |
+| ----- | ----- | ----- |
+| begin; select id from t where c=5 lock in share mode; |                                       |                                            |
+|                                         | update t set d=d+1 where id=5;（Query Ok） |                                            |
+|                                         |                                       | insert into values(7,7,7);（blocked） |
+
+看到这个例子，你是不是有一种“该锁的不锁，不该锁的乱锁”的感觉？我们来分析一下吧。
+
+这里 事务A 要给索引 c 上 c=5 的这一行加上读锁。
+1. 根据原则 1，加锁单位是 next-key lock，因此会给 (0,5]加上 next-key lock。
+2. 要注意 c 是普通索引，因此仅访问 c=5 这一条记录是不能马上停下来的，需要向右遍历，查到 c=10 才放弃。根据原则 2，访问到的都要加锁，因此要给 (5,10]加 next-key lock。
+3. 但是同时这个符合优化 2：等值判断，向右遍历，最后一个值不满足 c=5 这个等值条件，因此退化成间隙锁 (5,10)。
+4. 根据原则 2 ，只有访问到的对象才会加锁，这个查询使用覆盖索引，并不需要访问主键索引，所以主键索引上没有加任何锁，这就是为什么 事务B 的 update 语句可以执行完成。
+
+但事务C 要插入一个 (7,7,7) 的记录，就会被 事务A 的间隙锁 (5,10) 锁住。需要注意，在这个例子中，lock in share mode 只锁覆盖索引，但是如果是 for update 就不一样了。 执行 for update 时，系统会认为你接下来要更新数据，因此会顺便给主键索引上满足条件的行加上行锁。
+
+这个例子说明，锁是加在索引上的；同时，它给我们的指导是，如果要用 lock in share mode 来给行加读锁避免数据被更新的话，就必须得绕过覆盖索引的优化，在查询字段中加入索引中不存在的字段。比如，将 事务A 的查询语句改成 select d from t where c=5 lock in share mode。你可以自己验证一下效果。
+
+#### 案例三：主键索引范围锁
+
+#### 案例四：非唯一索引范围锁
+
+#### 案例五：唯一索引范围锁 bug
+
+#### 案例六：非唯一索引上存在"等值"的例子
+
+#### 案例七：limit 语句加锁
+
+#### 案例八：一个死锁的例子
+
+#### 案例总结
+1. 查询过程中访问到的对象才会加锁，而加锁的基本单位是next-key lock（前开后闭）；
+2. 等值查询上MySQL的优化：索引上的等值查询，如果是唯一索引，next-key lock会退化为行锁，如果不是唯一索引，需要访问到第一个不满足条件的值，此时next-key lock会退化为间隙锁；
+3. 范围查询：无论是否是唯一索引，范围查询都需要访问到不满足条件的第一个值为止。
+
+#### 总结
+再次说明一下，我们上面的所有案例都是在可重复读隔离级别 (repeatable-read) 下验证的。同时，可重复读隔离级别遵守两阶段锁协议，所有加锁的资源，都是在事务提交或者回滚的时候才释放的。
+
+在最后的案例中，你可以清楚地知道 next-key lock 实际上是由间隙锁加行锁实现的。如果切换到读提交隔离级别 (read-committed) 的话，就好理解了，过程中去掉间隙锁的部分，也就是只剩下行锁的部分。
+
+另外，在读提交隔离级别下还有一个优化，即：语句执行过程中加上的行锁，在语句执行完成后，就要把“不满足条件的行”上的行锁直接释放了，不需要等到事务提交。也就是说，读提交隔离级别下，锁的范围更小，锁的时间更短，这也是不少业务都默认使用读提交隔离级别的原因。
+
+通过以上几个案例，可以对 next-key lock 的概念有更清晰的认识，并且会用加锁规则去判断语句的加锁范围。在业务需要使用可重复读隔离级别的时候，能够更细致地设计操作数据库的语句，解决幻读问题的同时，最大限度地提升系统并行处理事务的能力。
+
