--- a/mysql/MySql实战45_2024.md
+++ b/mysql/MySql实战45_2024.md
@@ -16,11 +16,14 @@
 间隙锁
 
 4. next key lock
-临键锁（X锁+间隙锁）
+临键锁（X锁+间隙锁，注意这不是一个锁，也不是一起原子性加锁，而是各自加锁，是两个独立的锁，如果加X锁成功，但是gap锁被其它事务持有，X锁也是会被成功持有的，然后进入锁等待，等其它事务释放gap间隙锁）
 
 5. 行读锁（S lock 共享锁）
 
 6. 行写锁（X lock 排它锁）
+
+7. 查看事务信息
+SELECT * FROM performance_schema.processlist;
 
 
 ## # 执行过程
@@ -1322,7 +1325,7 @@ commit;
 进一步地，这两个不同的隔离级别现象有什么不一样的，关于我们的业务，“用读提交就够了”这个结论是怎么得到的？如果业务开发和运维团队这些问题都没有弄清楚，那么“没问题”这个结论，本身就是有问题的。
 
 
-## # mysql 重复读隔离级别 加锁规则 (mysql 适用版本：即 5.x 系列 <=5.7.24，8.0 系列 <=8.0.13)
+## # mysql 重复读隔离级别 加锁规则 (mysql 适用版本：即 5.x 系列 <=5.7.24，8.0 系列 <=8.0.13，其它版本需要自行验证结论)
 
 #### 加锁规则里面，包含了两个“原则”、两个“优化”和一个“bug”。
 1. 原则 1：加锁的基本单位是 next-key lock。记得，next-key lock 是前开后闭区间。
@@ -1374,19 +1377,122 @@ insert into t values(0,0,0),(5,5,5),
 
 但事务C 要插入一个 (7,7,7) 的记录，就会被 事务A 的间隙锁 (5,10) 锁住。需要注意，在这个例子中，lock in share mode 只锁覆盖索引，但是如果是 for update 就不一样了。 执行 for update 时，系统会认为你接下来要更新数据，因此会顺便给主键索引上满足条件的行加上行锁。
 
-这个例子说明，锁是加在索引上的；同时，它给我们的指导是，如果要用 lock in share mode 来给行加读锁避免数据被更新的话，就必须得绕过覆盖索引的优化，在查询字段中加入索引中不存在的字段。比如，将 事务A 的查询语句改成 select d from t where c=5 lock in share mode。你可以自己验证一下效果。
+这个例子说明，锁是加在索引上的；同时，它给我们的指导是，如果要用 lock in share mode（共享锁即S锁） 来给行加读锁避免数据被更新的话，就必须得绕过覆盖索引的优化，在查询字段中加入索引中不存在的字段。比如，将 事务A 的查询语句改成 select d from t where c=5 lock in share mode。你可以自己验证一下效果。
 
-#### 案例三：主键索引范围锁
+#### 案例三：主键索引范围锁（第三个例子是关于范围查询的）
+对于表 t，下面这两条查询语句，加锁范围相同吗？
+```sql
+use t;
+select * from t where id=10 for update;
+select * from t where id>=10 and id<11 for update;
+```
+id 定义为 int 类型，这两个语句就是等价的吧？其实，它们并不完全等价。
+
+在逻辑上，这两条查语句肯定是等价的，但是它们的加锁规则不太一样。现在就让 事务A 执行第二个查询语句，来看看加锁效果。
+| 事务A | 事务B | 事务C |
+| ----- | ----- | ----- |
+| begin; select * from t where id>=10 and id<11 for update; |                                       |                                            |
+|                | insert into values(8,8,8);（Query Ok） insert into t values(13,13,13); (blocked) |                                            |
+|                                                           |                                       | update t set d=d+1 where id=15;（blocked） |
+
+用前面提到的加锁规则，来分析一下事务A会加什么锁呢？
+1. 开始执行的时候，要找到第一个 id=10 的行，因此本该是 next-key lock(5,10]。 根据优化 1， 主键 id 上的等值条件，退化成行锁，只加了 id=10 这一行的行锁。
+2. 范围查找就往后继续找，找到 id=15 这一行停下来，因此需要加 next-key lock(10,15]。（最新版本的mysql已经退化为(10,15)的间隙锁）
+
+所以，事务A这时候锁的范围就是主键索引上，行锁 id=10 和 next-key lock(10,15]。这样，事务B 和 事务C 的结果你就能理解了。
+
+这里你需要注意一点，首次事务A定位查找 id=10 的行的时候，是当做等值查询来判断的，而向右扫描到 id=15 的时候，用的是范围查询判断。
 
 #### 案例四：非唯一索引范围锁
+需要注意的是，与案例三不同的是，案例四中查询语句的 where 部分用的是字段 c。
+| 事务A | 事务B | 事务C |
+| ----- | ----- | ----- |
+| begin; select * from t where c>=10 and c<11 for update; |                                       |                                            |
+|                                                         | insert into t values(8,8,8); (blocked) |                                            |
+|                                                         |                                       | update t set d=d+1 where id=15;（blocked） |
 
-#### 案例五：唯一索引范围锁 bug
+这次事务A用字段 c 来判断，加锁规则跟案例三唯一的不同是：在第一次用 c=10 定位记录的时候，索引 c 上加了 (5,10]这个 next-key lock 后，由于索引 c 是非唯一索引，没有优化规则，也就是说不会蜕变为行锁，因此最终事务A加的锁是，索引 c 上的 (5,10] 和 (10,15] 这两个 next-key lock。
+
+所以从结果上来看，事务B要插入（8,8,8) 的这个 insert 语句时就被堵住了。
+
+这里需要扫描到 c=15 才停止扫描，是合理的，因为 InnoDB 要扫到 c=15，才知道不需要继续往后找了。
+
+#### 案例五：唯一索引范围锁 bug （版本8.0.33，没有修复，只是主键索引修复了，非主键唯一索引依然存在bug）
+前面的四个案例，已经用到了加锁规则中的两个原则和两个优化，接下来再看一个关于加锁规则中 bug 的案例。
+| 事务A | 事务B | 事务C |
+| ----- | ----- | ----- |
+| begin; select * from t where id>10 and id<=15 for update; |                                           |                                           |
+|                                                            | update t set d=d+1 where id=20;（blocked）|                                           |
+|                                                            |                                           | insert into t values(16,16,16); (blocked) |
+
+事务A是一个范围查询，按照原则 1 的话，应该是索引 id 上只加 (10,15]这个 next-key lock，并且因为 id 是唯一键，所以循环判断到 id=15 这一行就应该停止了。
+
+但是实现上，InnoDB 会往前扫描到第一个不满足条件的行为止，也就是 id=20。而且由于这是个范围扫描，因此索引 id 上的 (15,20]这个 next-key lock 也会被锁上。
+
+所以看到了，事务B要更新 id=20 这一行，是会被锁住的。同样地，session C 要插入 id=16 的一行，也会被锁住。
+
+照理说，这里锁住 id=20 这一行的行为，其实是没有必要的。因为扫描到 id=15，就可以确定不用往后再找了。但实现上还是这么做了，因此我认为这是个 bug。
+
+官方 bug 系统上也有提到，但是并未被 verified。所以，认为这是 bug 这个事儿，也只能算我的一家之言，如果你有其他见解的话，也欢迎你提出来。
 
 #### 案例六：非唯一索引上存在"等值"的例子
+接下来的例子，是为了更好地说明“间隙”这个概念。这里，我给表 t 插入一条新记录。 ``` insert into t values(30,10,30); ```
+新插入的这一行 c=10，也就是说现在表里有两个 c=10 的行。那么，这时候索引 c 上的间隙是什么状态了呢？你要知道，由于非唯一索引上包含主键的值，所以是不可能存在“相同”的两行的。
+
+虽然有两个 c=10，但是它们的主键值 id 是不同的（分别是 10 和 30），因此这两个 c=10 的记录之间，也是有间隙的。
+
+这次用 delete 语句来验证。注意，delete 语句加锁的逻辑，其实跟 select ... for update 是类似的，也就是总结的两个“原则”、两个“优化”和一个“bug”
+
+| 事务A | 事务B | 事务C |
+| ----- | ----- | ----- |
+| begin; delete from t where c=10; |                                           |                                            |
+|                                  | insert into t values(12,12,12); (blocked) |                                            |
+|                                  |                                           | update t set d=d+1 where c=15;（Query Ok） |
+
+这时，事务A在遍历的时候，先访问第一个 c=10 的记录。同样地，根据原则1，这里加的是 (c=5,id=5) 到 (c=10,id=10) 这个 next-key lock。
+
+然后，事务A向右查找，直到碰到 (c=15,id=15) 这一行，循环才结束。根据优化2，这是一个等值查询，向右查找到了不满足条件的行，所以会退化成 (c=10,id=10) 到 (c=15,id=15) 的间隙锁。
+
+也就是说，这个 delete 语句在索引 c 上的加锁是：(5,(c=10,id=30)]的临键锁和(10,15)的间隙锁，行锁((c=10,id=10)、(c=10,id=30))，间隙锁（(5,10),(10,10),(10,15)），就是(c=5,id=5) 和 (c=15,id=15) 这两行上都没有锁。
+
 
 #### 案例七：limit 语句加锁
 
+| 事务A | 事务B |
+| ----- | ----- |
+| begin; delete from t where c=10 limit 2; |                                            |
+|                                          | insert into t values(12,12,12); (Query Ok) |
+|                                          |                                            |
+
+这个例子里，事务A的 delete 语句加了 limit 2。表 t 里 c=10 的记录其实只有两条，因此加不加 limit 2，删除的效果都是一样的，但是加锁的效果却不同。可以看到，事务B的 insert 语句执行通过了，跟案例六的结果不同。
+
+这是因为，案例七里的 delete 语句明确加了 limit 2 的限制，因此在遍历到 (c=10, id=30) 这一行之后，满足条件的语句已经有两条，循环就结束了。因此，索引 c 上的加锁范围就变成了从（c=5,id=5) 到（c=10,id=30) 这个前开后闭区间
+
+在(c=10,id=30) 之后的这个间隙并没有在加锁范围里，因此 insert 语句插入 c=12 是可以执行成功的。
+
+这个例子对实践的指导意义就是，在删除数据的时候尽量加 limit。这样不仅可以控制删除数据的条数，让操作更安全，还可以减小加锁的范围。
+
 #### 案例八：一个死锁的例子
+前面的例子中，在分析的时候，是按照 next-key lock 的逻辑来分析的，因为这样分析比较方便。最后再看一个案例，目的是说明：next-key lock 实际上是间隙锁和行锁加起来的结果。
+
+| 事务A | 事务B |
+| ----- | ----- |
+| begin; select id from t where c=10 lock in share mode; |                                           |
+|                                                        | update t set d=d+1 where c=10;（blocked） |
+| insert into t values(8,8,8);                           |                                           |
+|                                                        | ERROR 1213(40001): Deadlock found when trying to get lock;try restarting transaction |
+
+现在，按时间顺序来分析一下为什么是这样的结果。
+1. 事务A启动事务后执行查询语句加 lock in share mode，在索引 c 上加了 next-key lock(5,10] 和间隙锁 (10,15)；
+2. 事务B的 update 语句也要在索引 c 上加 next-key lock(5,10] ，进入锁等待；
+3. 然后 事务A要再插入 (8,8,8) 这一行，被 session B 的间隙锁锁住。由于出现了死锁，InnoDB 让 session B 回滚。
+
+事务B的 next-key lock 不是还没申请成功吗？
+
+其实是这样的，事务B的“加 next-key lock(5,10] ”操作，实际上分成了两步，先是加 (5,10) 的间隙锁，加锁成功；然后加 c=10 的行锁，这时候才被锁住的。
+
+也就是说，在分析加锁规则的时候可以用 next-key lock 来分析。但是要知道，具体执行的时候，是要分成间隙锁和行锁两段来执行的。
+
 
 #### 案例总结
 1. 查询过程中访问到的对象才会加锁，而加锁的基本单位是next-key lock（前开后闭）；
